# parakeet-ros

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: add_copyright_information.yaml
Launch/: Example.launch  ParakeetPro.launch  ParakeetProE.launch
docs/: Building and Running.md  Connecting via RViz.md  Runtime Parameters.md
include/: ROSNode.h
src/: ROSNode.cpp  main.cpp
